--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -3,14 +3,14 @@
     <dl class="sm:divide-y sm:divide-gray-200">
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Ref Number</dt>
-        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"> <%= appointment.ref_number %></dd>
+        <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"> <%= link_to appointment.ref_number, appointment_path(appointment), data: { turbo: false } %></dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Status</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0 w-full xl:w-1/3 lg:w-2/3">
           <%= select_tag("appointmentStatusDropdown", options_for_select(@appt_statuses.map{ |k, v| [k.capitalize, v] }), { prompt:"Change Status", style: "display: none;" }) %>
           <span id="appointmentStatus" data-action="click->appointments#handleStatusEditableBehaviour">
-            <span class="inline-block p-2 -mx-2 hover:bg-gray-100 cursor-pointer" id="wrappedSpanElementForStatus" title="Click to edit status"><%= appointment.status.titleize %></span>
+            <span><%= colored_appointment_status appointment.status.titleize %></span>
           </span>
         </dd>
       </div>
