--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
         <%= render partial: "shared/navbar" %>
       <% end %>
       <div class="lg:px-0 h-full">
-        <% unless current_user.blank? %>
+        <% unless current_user.blank? || controller_name == "static" %>
           <%= render partial: 'shared/sidenav' %>
           <%= render partial: 'shared/customer_sidenav' %>
           <%= render partial: 'shared/interpreter_sidenav' %>
