--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto mt-8">
+<div class="container mx-auto mt-8 max-w-6xl px-4 sm:px-6 lg:px-8 text-justify">
   <h1 class="mb-4"><%= t(".title") %></h1>
   <%= tag.p t("users.agreements.show.last_updated", date: l(@agreement.updated.to_date, format: :long)), class: "mb-4 text-gray-700 leading-normal italic" if @agreement %>
 
