index logo update

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,5 @@
 <div class="py-32 max-w-2xl m-auto text-center flex flex-col items-center justify-center">
-  <%= image_tag "logo.png", class: "h-28 w-auto fill-current text-gray-700 hover:text-gray-800" %>
-  <p class="mb-6 text-gray-700 leading-normal text-xl">Connecting people.</p>
+  <%= image_tag "logo-tagline.png", class: "h-28 w-auto fill-current text-gray-700 hover:text-gray-800" %>
 
   <% if Rails.env.development? %>
     <div class="flex flex-col items-center md:flex-row">
