--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,5 +1,5 @@
 <div class="py-16 max-w-2xl m-auto text-center flex flex-col items-center justify-center">
-  <%= image_tag "logo-tagline.png", class: "h-28 w-auto fill-current text-gray-700 hover:text-gray-800" %>
+  <%= image_tag "logo-tagline.png", class: "w-auto fill-current text-gray-700 hover:text-gray-800" %>
 
   <% if Rails.env.development? %>
     <div class="flex flex-col items-center md:flex-row">
