--- a/app/views/customer_categories/_form.html.erb
+++ b/app/views/customer_categories/_form.html.erb
@@ -10,7 +10,7 @@
                   <%= form.text_field :display_value, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. Medical" %>
               </div>
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
-                <%= form.label "Appointment Prefix*", class: "block text-sm font-medium text-gray-700" %>
+                <%= form.label "On Site Appointment Prefix*", class: "block text-sm font-medium text-gray-700" %>
                 <%= form.text_field :appointment_prefix, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", placeholder: "ex. M" %>
               </div>
               <div class="col-span-6 sm:col-span-3">
