TK-392: Add subscription paywall to agencies
- Hide agency sidenav if current account user is unsubscribed
- Add require_subscription guard to agencies_controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
       <% end %>
       <div class="lg:px-0 h-full">
         <% unless current_user.blank? || controller_name == "static" %>
-          <%= render partial: 'shared/sidenav' %>
+          <%= render partial: 'shared/sidenav' if subscribed? %>
           <%= render partial: 'shared/customer_sidenav' %>
           <%= render partial: 'shared/interpreter_sidenav' %>
           <%= render partial: 'shared/site_admin_sidenav' %>
