--- a/app/views/agencies/agency_detail_form.html.erb
+++ b/app/views/agencies/agency_detail_form.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-1 flex-col md:pl-64">
+<div class="flex flex-1 flex-col <%= subscribed? ? "md:pl-64" : "" %>">
   <main class="flex-1">
     <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
@@ -83,7 +83,7 @@
                       </div>
                       <div class="sm:col-span-3">
                       <label for="street-address" class="block text-sm font-medium text-gray-700">Time zone *</label>
-                        <%= agency_detail.select :time_zone, options_for_select(time_zone_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %> 
+                        <%= agency_detail.select :time_zone, options_for_select(time_zone_select_options), class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                     </div>
                     <% end %>
                   </div>
