--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,10 +39,10 @@
           </div>
 
           <div class="w-full lg:pl-16 lg:w-1/2">
-            <div class="flex items-center gap-4">
-              <%= image_tag avatar_url_for(form.object), class: "rounded-full" %>
+            <div class="flex items-center gap-4" data-controller="users">
+              <%= image_tag avatar_url_for(form.object), class: "rounded-full w-20 h-20 object-cover", data: { target: "users.preview" } %>
               <div>
-                <%= form.file_field :avatar, accept: "image/*", class: "file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-gray-50 file:text-gray-700 hover:file:bg-gray-100" %>
+                <%= form.file_field :avatar, accept: "image/*", class: "file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-gray-50 file:text-gray-700 hover:file:bg-gray-100", data: { action: "change->users#previewImage" } %>
               </div>
             </div>
           </div>
