started scoping appointments for interpreters

--- a/app/views/interpreters/dashboard.html.erb
+++ b/app/views/interpreters/dashboard.html.erb
@@ -146,7 +146,7 @@
                     <tr class="bg-white">
                       <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
                         <time datetime="2020-07-11">
-                          <%= link_to appointment.ref_number, appointment_path(appointment), data: { turbo: false } %>
+                          <%= link_to appointment.ref_number, appointment_details_interpreter_path(appointment), data: { turbo: false } %>
                         </time>
                       </td>
                       <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
