--- a/app/views/dashboard/requestor.html.erb
+++ b/app/views/dashboard/requestor.html.erb
@@ -148,7 +148,7 @@
                         <tr>
                           <th class="whitespace-nowrap bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Ref Numb" %></th>
                           <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :customer_id, "Customer Name" %></th>
-                          <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col"><%= sortable @appointments, :status, "Status" %></th>
+                          <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col"><%= sortable @appointments, :current_status, "Status" %></th>
                           <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :date, "Date" %></th>
                         </tr>
                       </thead>
