--- a/app/views/appointments/_appointment_details.html.erb
+++ b/app/views/appointments/_appointment_details.html.erb
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-2 gap-4 mt-5">
     <div>
       <ul class="list-none list-outside">
-        <li><i class="fa fa-calendar mr-4"></i> <%= appointment_start_date_and_time_in_user_time_zone(@appointment, current_user) %></li>
+        <li><i class="fa fa-calendar mr-4"></i> <%= appointment_start_date_and_time_in_user_time_zone(@appointment, current_user) %> <%= "(#{appointment.time_zone})" if appointment.time_zone %></li>
         <li><i class="fa fa-male mr-4"></i> <%= @appointment.modality.titleize %></li>
         <li><i class="fa fa-language mr-2"></i> <%= @appointment.language.name %></li>
         <li><i class="fa fa-book mr-3"></i> <%= @appointment.customer.name %></li>
