--- a/app/views/interpreters/_appointments.html.erb
+++ b/app/views/interpreters/_appointments.html.erb
@@ -29,13 +29,13 @@
           <dt class="sr-only">Status</dt>
           <dd class="mt-1 truncate text-gray-500 capitalize"><%= colored_appointment_status(appointment.status) %></dd>
           <dt class="sr-only">Start Time</dt>
-          <dd class="mt-1 truncate text-gray-500"><%= appointment.start_time.strftime("%B %-d at %l:%M %p") %></dd>
+          <dd class="mt-1 truncate text-gray-500"><%= appointment.start_time.strftime("%m-%d-%y at %l:%M %p") %></dd>
         </dl>
       </td>
       <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.modality.titleize %></td>
       <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.language&.name %></td>
       <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.duration %> minutes</td>
-      <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment&.start_time&.strftime("%a %Y-%m-%d, %l:%M %p") %></td>
+      <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment&.start_time&.strftime("%m-%d-%y, %l:%M %p") %></td>
       <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell capitalize"><%= colored_appointment_status(appointment.current_status) %></td>
       <% if @show_payment_amount %>
         <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= appointment.total_paid.present? ? number_to_currency(appointment.total_paid) : "" %></td>
