--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -18,9 +18,9 @@
             </div>
             <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
               <% unless @appointment.verified? %>
-                <%= link_to "Time Finish", time_finish_appointment_path(@appointment), class: "btn btn-secondary" %>
+                <%= link_to "Time Finish", time_finish_appointment_path(@appointment), class: "btn bg-tokaniprimary-500 text-white hover:text-white hover:bg-tokaniprimary-400" %>
               <% end %>
-              <%= link_to t("edit"), edit_appointment_path(@appointment), class: "btn btn-tokani_purple" %>
+              <%= link_to t("edit"), edit_appointment_path(@appointment), class: "inline-flex items-center justify-center rounded-lg border bg-transparent border-tokanisecondary-600 py-2 px-3.5 text-sm font-medium text-tokanisecondary-600 shadow-sm hover:bg-tokanisecondary-600 hover:text-white focus:outline-none" %>
             </div>
           </div>
           <div class="sm:flex sm:items-center pb-6">
